tests/macros/missing/name.stderr
error: missing required option `name`
 --> $DIR/name.rs:2:33
  |
2 |     requestty::questions![Input {}];
  |                                 ^^
