tests/macros/missing/name.rs
fn main() {
    requestty::questions![Input {}];
}
